<resources>
    <string name="app_name">witAg</string>

    <string name="action_settings">Settings</string>

    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>

    <string name="speech_kdxf_id">570f6529</string>
    <string name="lib_cancel">取消</string>
    <string name="lib_sure">确认</string>
    <string name="lib_loading">加载中</string>

    <string name="about_us_cellphone">联系电话：18081173362</string>
    <string name="about_us_telphone">座&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机：028-87077188</string>
    <string name="about_us_qq">Q&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Q：542660118/2192705598</string>
    <string name="about_us_web_url">网&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;站：www.cdbeyond.com</string>
    <string name="about_us_address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：成都青羊工业集中发展区西区青羊大学生创业园B2-5</string>

</resources>
