<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_167"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/selector_about_us_text_bg"
        android:text="关于我们"
        android:textColor="@color/white"
        android:gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_13"
                android:text="@string/about_us_cellphone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_13"
                android:text="@string/about_us_telphone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_13"
                android:text="@string/about_us_qq"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_13"
                android:text="@string/about_us_web_url"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_color"
                android:textSize="@dimen/sp_13"
                android:text="@string/about_us_address"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/qrcode"/>
    </RelativeLayout>
</LinearLayout>